--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -24,3 +24,41 @@
 }
 
 // End Site Header
+
+// Masthead
+
+.masthead {
+  background-color: #eee;
+  padding: 50px 0;
+}
+
+@media (min-width: 48em) {
+  .masthead {
+    padding: 100px 0;
+  }
+}
+
+.masthead-title {
+  margin-top: 0;
+}
+
+// End Masthead
+
+
+// Site Content
+
+.site-content {
+  padding: 50px 0;
+}
+
+// End Site Content
+
+// Site Footer
+
+.site-footer {
+  border-top: 1px solid #eee;
+  font-size: .875em;
+  padding-top: 10px;
+}
+
+// End Site Footer
