--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -53,6 +53,13 @@
 
 // End Site Content
 
+// Form
+
+.form-field {
+  margin-top: 0px;
+  margin-bottom: 15px;
+}
+
 // Site Footer
 
 .site-footer {
