--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,11 @@
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <% if current_user  %>
+          <li><%= link_to 'Logout', logout_path, method: :delete %></li>
+        <% else %>
+          <li><%= link_to 'Login', login_path %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
