Add flash messages

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -25,6 +25,7 @@
 
 // End Site Header
 
+
 // Masthead
 
 .masthead {
@@ -53,12 +54,16 @@
 
 // End Site Content
 
+
 // Form
 
 .form-field {
   margin-top: 0px;
   margin-bottom: 15px;
 }
+
+// End Form
+
 
 // Site Footer
 
