--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 </head>
 <body>
   <%= render 'layouts/header' %>
+  <%= render 'layouts/flash' %>
   <main container class="site-content">
     <%= yield %>
   </main>
