--- a/app/views/layouts/masthead.html.erb
+++ b/app/views/layouts/masthead.html.erb
@@ -10,6 +10,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <%= render 'layouts/flash' %>
   <%= render 'layouts/header' %>
   <%= yield %>
   <%= render 'layouts/footer' %>
