--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -52,6 +52,15 @@
   padding: 50px 0;
 }
 
+.content_container {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.comments {
+  margin-top: 40px;
+}
+
 // End Site Content
 
 
