--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,7 +12,7 @@
         <%= f.password_field :password_confirmation, class: 'input--large',
           placeholder: 'Password confirmation' %>
       </div>
-      <%= f.submit 'Sign Up', class: 'button--pill' %>
+      <%= f.submit 'Sign Up', class: 'input--large' %>
     <% end %>
     <small>
       By signing up, you agree to the Terms of Service and Privacy Policy,
