--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
     <h1 column="4" class="logo">Stop Suap</h1>
     <nav column="8" class="nav">
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><%= link_to 'Home', root_path %></li>
         <li><a href="#">About</a></li>
         <% if current_user  %>
           <li><%= link_to 'Logout', logout_path, method: :delete %></li>
