Create partial form and partial story items

--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -21,7 +21,7 @@
 
         <div class="form-field">
           <%= f.label :amount, "How much you've paid?" %>
-          <%= f.number_field :amount %>
+          <%= f.text_field :amount %>
         </div>
       </fieldset>
 
@@ -49,6 +49,7 @@
           </div>
         <% end %>
       </fieldset>
+
       <%= f.submit %>
     <% end %>
   </div>
