--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,18 +1,5 @@
 <div row>
   <div column="6 +3">
-    <% @stories.order(created_at: :desc).each do |story| %>
-      <div class="story">
-        <h4><%= link_to story.title, story %></h4>
-        <p>
-          <span class="label bg--error"><%= story.category.name %></span>
-          <span class="label">Rp. <%= story.amount.to_i %></span>
-        </p>
-        <small>
-          Reported on <%= story.created_at.strftime('%e %B, %Y') %> from <%= story.location.city.name %>
-        </small>
-        <p><%= truncate(story.content, length: 160) { link_to ' read more »', story } %></p>
-      </div>
-      <hr>
-    <% end %>
+    <%= render partial: 'story', collection: @stories %>
   </div>
 </div>
