--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,19 +1,7 @@
 <div row>
   <div column="4 +4">
     <h3>Join Stop Suap today!</h3>
-    <%= form_for @user, url: signup_path do |f| %>
-      <div class="form-field">
-        <%= f.text_field :email, class: 'input--large', placeholder: 'Email' %>
-      </div>
-      <div class="form-field">
-        <%= f.password_field :password, class: 'input--large', placeholder: 'Password' %>
-      </div>
-      <div class="form-field">
-        <%= f.password_field :password_confirmation, class: 'input--large',
-          placeholder: 'Password confirmation' %>
-      </div>
-      <%= f.submit 'Sign Up', class: 'input--large' %>
-    <% end %>
+    <%= render 'form' %>
     <small>
       By signing up, you agree to the Terms of Service and Privacy Policy,
       including Cookie Use.
