--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,11 @@
 <footer container class="site-footer">
-  <p>Copyright &copy; 2015 by Stop Suap</p>
+  <div row>
+    <p column="6">Copyright &copy; 2015 by Stop Suap</p>
+    <ul class="right">
+      <li><a href="#">About</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </div>
 </footer>
