--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,5 +1,5 @@
 <div row>
   <div column="6 +3">
-    <%= render partial: 'story', collection: @stories %>
+    <%= render partial: 'story', collection: @stories.order(created_at: 'desc') %>
   </div>
 </div>
