--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -18,7 +18,7 @@
 
     <div class="form-field">
       <%= f.label :amount, "How much you've paid?" %>
-      <%= f.text_field :amount %>
+      <%= f.text_field :amount, data: { autonumeric: { aSign: 'Rp ', mDec: 0 } } %>
     </div>
   </fieldset>
 
@@ -26,7 +26,8 @@
     <legend>When and where it happens?</legend>
     <div class="form-field">
       <%= f.label :event_date, 'When it happens?' %>
-      <%= f.text_field :event_date %>
+      <%= f.text_field :event_date,
+        value: (@story.event_date.nil? ? Date.today.strftime('%e %B, %Y') : @story.event_date.strftime('%e %B, %Y')) %>
     </div>
     <%= f.fields_for :location, @story.location || @story.build_location do |field| %>
       <div class="form-field">
