Add sample map data using high charts

--- a/app/views/mockups/index.html.erb
+++ b/app/views/mockups/index.html.erb
@@ -13,6 +13,11 @@
 
 <main container class="site-content">
   <div row>
+    <div column="12">
+      <div id="container-map"></div>
+    </div>
+  </div>
+  <div row>
     <div column="6">
       <h3>Latest Stories</h3>
       <p>This is a short description for one of the three columns on our homepage.</p>
