--- a/app/views/layouts/masthead.html.erb
+++ b/app/views/layouts/masthead.html.erb
@@ -14,5 +14,8 @@
   <%= yield %>
   <%= render 'layouts/footer' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <script src="https://code.highcharts.com/maps/highmaps.js"></script>
+  <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
+  <script src="https://code.highcharts.com/mapdata/countries/id/id-all.js"></script>
 </body>
 </html>
