--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -10,5 +10,8 @@
       <%= @story.content %>
     </div>
     <%= render 'comment_form' %>
+    <div id="comments">
+      <%= render @comments  %>
+    </div>
   </div>
 </div>
