--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,16 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Stop Suap</title>
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => false %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <%= render 'layouts/header' %>
-  <%= render 'layouts/flash' if flash.any? %>
-  <main container class="site-content">
-    <%= yield %>
-  </main>
-  <%= render 'layouts/footer' %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <div class="wrapper">
+    <%= render 'layouts/header' %>
+    <%= render 'layouts/flash' if flash.any? %>
+    <main container class="site-content">
+      <%= yield %>
+    </main>
+    <%= render 'layouts/footer' %>
+  </div>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => false %>
 </body>
 </html>
