Fixed comment feature and create contact us feature

--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -9,7 +9,9 @@
     <div class="content_container">
       <%= @story.content %>
     </div>
-    <%= render 'comment_form' %>
+    <% if current_user %>
+      <%= render 'comment_form' %>
+    <% end %>
     <div id="comments">
       <%= render @comments  %>
     </div>
