--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,7 +10,7 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require concise/concise.scss
+ *= require foundation.min
  *= require pickadate.js/default.css
  *= require pickadate.js/default.date.css
  *= require_tree .
