--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,7 +1,52 @@
+// Global style
+
+a {
+  color: #525252;
+  transition: all ease 0.5s;
+  -webkit-transition: all ease 0.5s;
+  -moz-transition: all ease 0.5s;
+  -o-transition: all ease 0.5s;
+
+  &:hover {
+    color: #000;
+    
+  }
+}
+
+.container{
+  margin: 2rem;
+}
+.border-right{
+  border-right: 4px double #000;
+}
+.border-left{
+  border-left: 4px double #000;
+}
 // Site Header
 
-.site-header {
-  border-bottom: 1px solid #eee;
+.top-bar {
+  border-bottom: 3px solid #525252;
+  background: #fff;
+  height: 6rem;
+  padding: 1.7rem .5rem;
+  a {
+    color: #000;
+    &:hover{
+      transform: scale(1.05);
+    }
+  }
+  .menu-text{
+    padding: 0;
+    margin-left: 2rem;
+    a{
+      transform: none
+    }
+  }
+
+  ul{
+    background: transparent;
+  }
+
 }
 
 .logo {
@@ -29,18 +74,27 @@
 // Masthead
 
 .masthead {
-  background-color: #eee;
-  padding: 50px 0;
+  background-color: #C7C7C7;
+  padding: 1rem;
+  height: 8rem;
 }
 
 @media (min-width: 48em) {
   .masthead {
-    padding: 100px 0;
+    padding: 1rem;
   }
 }
 
 .masthead-title {
   margin-top: 0;
+  display: inline-block;
+}
+
+#container-map{
+  height: calc( 100vh - 14rem);
+}
+#canvas-holder{
+  text-align: center;
 }
 
 // End Masthead
@@ -49,7 +103,6 @@
 // Site Content
 
 .site-content {
-  padding: 50px 0;
 }
 
 .content_container {
