--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,7 @@
  * file per style scope.
  *
  *= require foundation.min
+ *= require jquery.steps
  *= require pickadate.js/default.css
  *= require pickadate.js/default.date.css
  *= require_tree .
