--- a/app/assets/stylesheets/vendor-overrides.css.scss
+++ b/app/assets/stylesheets/vendor-overrides.css.scss
@@ -3,3 +3,13 @@
     padding: 0 4rem;
   }
 }
+.button{
+  &:hover{
+    outline: none;
+  }
+}
+.pagination {
+  .current{
+    background: #000;
+  }
+}
