--- a/app/views/mockups/index.html.erb
+++ b/app/views/mockups/index.html.erb
@@ -19,7 +19,7 @@
         </ul>
       </div>
 
-      <div class="columns medium-6 small-12 border-left">
+      <div class="columns medium-6 small-12 border-left-double">
         <h3>Statistics</h3>
         <div id="canvas-holder">
           <canvas id="chart-area" width="300" height="300"/>
