--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -1,6 +1,8 @@
-<div row>
-  <div column="6 +3">
-    <h3>Share your story</h3>
-    <%= render 'form' %>
+<div class="container">
+  <div class="row">
+    <div class="columns medium-8 medium-offset-2">
+      <h3>Share your story</h3>
+      <%= render 'form' %>
+    </div>
   </div>
 </div>
