--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
-<footer container class="site-footer">
-  <div row>
-    <p column="6">Copyright &copy; 2015 by Stop Suap</p>
+<footer class="site-footer">
+  <div class="row">
+    <p class="columns small-6">Copyright &copy; 2015 by Stop Suap</p>
     <ul class="right">
       <li><a href="#">About</a></li>
       <li><a href="#">Privacy</a></li>
