--- a/app/views/stories/_story.html.erb
+++ b/app/views/stories/_story.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="columns medium-9 small-12 border-right-double">
       <h4><%= link_to story.title, story %></h4>
-      <small>Reported on <%= story.created_at.strftime('%e %B, %Y') %> from <%= story.location.city.name %></small>
+      <small>Diposting pada <%= story.created_at.strftime('%e %B, %Y') %> di <%= story.location.city.name %></small>
       <p><%= truncate(story.content, length: 160) { link_to " read more »", story } %></p>
     </div>
     <div class="columns medium-3 small-12 text-center">
