--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="columns medium-8 medium-offset-2 create-story">
-      <h3 class="border-bottom-double">Share your story</h3>
+      <h3 class="border-bottom-double">Bagikan Ceritamu</h3>
       <%= render 'form' %>
     </div>
   </div>
