--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,5 +1,8 @@
 <div row>
   <div column="6 +3">
+    <%= search_form_for @search do |f| %>
+      <%= f.search_field :title_or_content_or_category_name_or_location_city_name_or_location_province_name_cont %>
+    <% end %>
     <%= render partial: 'story', collection: @stories.order(created_at: 'desc') %>
   </div>
 </div>
