--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,10 @@
-<div class="top-bar">
+<div class="top-bar" >
   <div class="top-bar-left">
     <div class="menu-text"><h3><%= link_to 'Stop Suap', root_path %></h3></div>
   </div>
   <div class="top-bar-right">
     <ul class="menu">
-      <li><%= link_to 'Beranda', root_path %></li>
+      <li data-no-turbolink><%= link_to 'Beranda', root_path %></li>
       <li><%= link_to 'Laporan', stories_path %></li>
       <li><%= link_to 'Buat Laporan', new_story_path %></li>
       <% if current_user  %>
