--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,1 +1,1 @@
-$("<%= escape_javascript(render @comment) %>").prependTo("#comments");
+$('<%= escape_javascript(render @comment) %>').prependTo('#comments');
