--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,8 +1,8 @@
 <% flash.each do |key, message| %>
   <div container class="alert-flash">
-    <div class="alert alert--<%= key %>">
-      <a class="alert-close" href="#">&times;</a>
+    <div data-alert class="alert-box <%= key %>">
       <p><%= message.html_safe %></p>
+      <a class="close" href="#">&times;</a>
     </div>
   </div>
 <% end %>
