--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -2,32 +2,25 @@
   <div class="index-control">
     <div class="row">
       <div class="columns medium-5">
-        <input type="text" placeholder="Search" name="search">
+        <%= search_form_for @search do |f| %>
+          <%= f.search_field :title_or_content_or_category_name_or_location_city_name_or_location_province_name_cont %>
+        <% end %>
       </div>
+
       <div class="columns medium-3 ">
-        <select id="kat">
-          <option value="" disabled selected>Kategori</option>
-          <option value="husker">Husker</option>
-          <option value="starbuck">Starbuck</option>
-          <option value="hotdog">Hot Dog</option>
-          <option value="apollo">Apollo</option>
-        </select>
+        <%= select_tag 'category',
+          options_from_collection_for_select(Category.all, 'id', 'name'), prompt: 'Please select' %>
       </div>
+
       <div class="columns medium-3 float-left">
-        <select id="prov">
-          <option value="" disabled selected>Provinsi</option>
-          <option value="jabar">Jawa Barat</option>
-          <option value="jatim">Jawa Timur</option>
-          <option value="jateng">Jawa Tengah</option>
-          <option value="jkt">Jakarta</option>
-        </select>
+        <%= select_tag 'province',
+          options_from_collection_for_select(Province.all, 'id', 'name'), prompt: 'Please select' %>
+      </div>
       </div>
     </div>
   </div>
+
   <div class="index-report">
-   <%= search_form_for @search do |f| %>
-      <%= f.search_field :title_or_content_or_category_name_or_location_city_name_or_location_province_name_cont %>
-    <% end %>
     <%= render partial: 'story', collection: @stories.order(created_at: 'desc') %>
     <ul class="pagination text-center" role="navigation" aria-label="Pagination">
       <li class="pagination-previous disabled">Previous <span class="show-for-sr">page</span></li>
