--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,8 @@
  *= require jquery.steps
  *= require pickadate.js/default.css
  *= require pickadate.js/default.date.css
+ *= require social-share-button
  *= require_tree .
  *= require_self
  */
+ @import "social-share-button";
